# nftgen

./: .gitignore  Cargo.toml  README.md  benchmarks.md  config.example
.github/workflows/: lint-and-test.yaml  test.yaml
src/: args.rs  image_builder.rs  ipfs.rs  layer.rs  lib.rs  metadata.rs  nftstorage.rs
src/api/: ipfs.rs  mod.rs  nftstorage.rs
src/cmd/: config.rs  generate.rs  mod.rs  opts.rs  upload.rs  utils.rs
src/nft/: image.rs  image_builder.rs  layer.rs  layer_group.rs  metadata.rs  mod.rs
src/nft/tests/: fixture.rs
