[package]
name = "nftgen"
version = "0.1.0"
edition = "2021"

[lib]
name = "nftgen"
path = "src/lib.rs"

[[bin]]
name = "nftgen"
path = "src/bin/main.rs"

[dependencies]
bstr = "0.2.17"
clap = { version = "3.1.18", features = [
    "derive",
    "unicode",
    "wrap_help",
] }
color-eyre = "0.6.1"
eyre = "0.6.8"
futures = "0.3.21"
image = "0.24.2"
log = "0.4.17"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
rayon = "1.5.3"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.19.2", features = ["macros", "fs", "process", "rt-multi-thread"] }
reqwest = "0.11.10"
regex = "1.5.6"
once_cell = "1.12.0"

[dev-dependencies]
assert-str = "0.1.0"
